--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4"
+        "typo3/cms-core": "^10.4",
+        "in2code/powermail": ">=5.3.0 <9.0.0"
     },
     "autoload": {
         "psr-4": {
