--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^10.4",
+        "typo3/cms": ">=7.6.0 <11.0.0",
         "in2code/powermail": ">=5.3.0 <9.0.0"
     },
     "autoload": {
